--- a/src/style.less
+++ b/src/style.less
@@ -71,6 +71,7 @@ body {
     font-size: 14px;
     color: var(--color-text);
 }
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
 
 @font-face {
     font-family: AlibabaPuHuiTi;
